# espboy32

./: .gitignore  CMakeLists.txt  README.md
components/gb/: CMakeLists.txt
components/gb/include/: cartridge.h  clock.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h  memory.h  rom_only.h
components/gb/src/: cartridge.c  clock.c  mbc1.c  mbc2.c  mbc3.c  mbc5.c  memory.c  rom_only.c
components/lcd/: CMakeLists.txt
components/lcd/include/: lcd.h
components/lcd/src/: lcd.c
main/: main.c
